# cpp_for_ffmpeg-rockchip

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mjpeg_to_h264.cpp  mjpeg_to_h264.h  test_cmd.sh
